# carla_sensor_fusion_practice

./: .gitignore  lecture_notes.md
step1_api_scripts/01_basic_api/: 01_connect_and_map.py  02_weather_control.py  03_spawn_vehicle.py  04_vehicle_autopilot.py  05_vehicle_manual_physics.py  06_spectator_align.py  README.md
step1_api_scripts/02_group_camera/: 07_spectator_follow.py  08_carla_attach_camera.py  09_carla_view_camera.py  10_carla_view_camera_rotated.py  11_carla_camera_view.py  README.md
step1_api_scripts/03_group_lidar/: 07_spectator_follow.py  12_carla_attach_lidar.py  13_carla_view_lidar.py  14_carla_view_lidar_cropped.py  README.md
step1_api_scripts/04_multi_sensors/: 07_spectator_follow.py  15_carla_attach_6_cameras.py  16_lidar_collect_binary.py  17_carla_aeb_simulation.py  README.md
step1_api_scripts/05_sensor_fusion/: 18_basic_coordinate_transform.py  19_basic_projection_math.py  20_synchronous_mode_matching.py  21_run_manual_control.py  22_sensor_fusion_visualization.py  README.md
step1_api_scripts/06_serialization_deserialization/: 23_raw_deserialization_viewer.py  24_image_processor_node.py  25_deserialization_socket_viewer.py  README.md
step2_ros2_bridge/: ros2_bridge_guide.md
step2_ros2_bridge/src/carla_common/: README.md  package.xml
step2_ros2_bridge/src/carla_manual_control/: README.md  package.xml
step2_ros2_bridge/src/carla_manual_control/src/carla_manual_control/: carla_manual_control.py
step2_ros2_bridge/src/carla_msgs/: CMakeLists.txt  README.md  (+1 more)
step2_ros2_bridge/src/carla_spawn_objects/: README.md  package.xml
step2_ros2_bridge/src/carla_spawn_objects/src/carla_spawn_objects/: carla_spawn_objects.py  set_initial_pose.py
step2_ros2_bridge/src/ros2_sensor_processing/: README.md  package.xml  setup.cfg  setup.py
step2_ros2_bridge/src/ros2_sensor_processing/launch/: sensor_processing.launch.py
step2_ros2_bridge/src/ros2_sensor_processing/ros2_sensor_processing/: camera_pipeline_node.py  lidar_filter_create_cloud_node.py
(+21 files in other folders)
