<?xml version="1.0"?>
<package format="3">
  <name>carla_manual_control</name>
  <version>0.0.0</version>
  <description>The carla_manual_control package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>rclpy</depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
