<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_sensor_processing</name>
  <version>1.0.0</version>
  <description>ROS2 node package for CARLA RGB Camera image pipeline and LiDAR CropBox/Downsample filters practice.</description>
  <maintainer email="student@todo.todo">Student</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
